# math-interpreter

./: CMakeLists.txt  Program.cpp  Program.h  README.md  io.cpp  io.h  lexer.cpp  lexer.h  main.cpp  mdCreator.py  parser.cpp  parser.h  plant.puml  src.md
ast/: AstNode.cpp  AstNode.h
src/: Program.cpp  Program.h
src/ast/: AstNode.h
src/interpreter/: ConstantDefinition.cpp  ConstantDefinition.h  Definition.h  FunctionDefinition.cpp  FunctionDefinition.h  Interpreter.cpp  Interpreter.h  ReturnValue.h
src/io/: io.cpp  io.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
